# social_action_detector

./: .dockerignore  .gitignore  Dockerfile  README.md  bert.py  ci.py  data.csv  main.py  pyproject.toml  requirements.txt  setup.py  start_webserver.py  web.py
data/: data.csv  holdout.csv
social_action_detector/: bert.py  config.py  dataset.py  evaluation.py  gpt4.py  handler.py  llama2.py  main.py  sdk.py  web.py
social_good_detector/: config.py  main.py
social_good_detector.egg-info/: PKG-INFO  SOURCES.txt
