[tool.poetry]
name = "social-work-detector"
version = "0.1.0"
description = ""
authors = ["Jean Carlo Machado <jean.machado@getyourguide.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.*"
transformers = "^4.35.2"
fire = "^0.5.0"
torch = "^2.1.1"
datasets = "^2.15.0"
accelerate = "^0.24.1"
scikit-learn = "^1.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
